--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,12 +2,36 @@
 {% block title %}HOME{% endblock %}
 {% block content %}
 <h1>
-            Welcome to my website
+    <blockquote class="blockquote">
+        <p class="mb-0">Welcome To weather and Note app</p><br>
+        <footer class="blockquote-footer">By <cite title="Source Title">jashan jindal</cite></footer>
+      </blockquote>
         </h1>
-        <p>This website can do some the things written bellow</p>
-        <ul>
-            <li>anil jindal</li>
-            <li>lakshay jindal</li>
-            <li>jashan jindal</li>
-        </ul>
+<div align="center">
+    <h2 align="center">
+        Notes
+    </h2>
+    <form method="POST">
+        <textarea name = "note" id="note" class="form-control" placeholder="Describe yourself here..."></textarea>
+        <br>
+        <div align="center">
+            <button type="submit" class = "btn btn-secondary btn-lg" >Add note</button>
+        </div>
+    </form>
+    </div>
+<div align="center">
+    <h2>
+        Recorded notes
+    </h2>
+    <ul align="LEFT" class="list-group list-group-flush" id="notes">
+        {% for note in user.notes %}
+        <li class="list-group-item" >{{note.data}}
+            <button type="button" class="close" onclick="delete_note({{ note.id }})">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </li>
+        {%endfor%}
+    </ul>
+</div>
+
 {% endblock %}
